--- a/debian/changelog
+++ b/debian/changelog
@@ -4,5 +4,6 @@ examplegolangdebproject (0.0.1) UNRELEASED; urgency=medium  * [[[insert-git-dch-
   * UNRELEASED
   * UNRELEASED
   * UNRELEASED
+  * UNRELEASED
 
- -- Bogdan Kolos <exitstop@list.ru>  Mon, 26 Jul 2021 00:22:11 +0300
+ -- Bogdan Kolos <exitstop@list.ru>  Mon, 26 Jul 2021 00:25:13 +0300
