--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,5 @@ examplegolangdebproject (0.0.1) UNRELEASED; urgency=medium  * [[[insert-git-dch-
 
   [ bg ]
   * UNRELEASED
-  * UNRELEASED
-  * UNRELEASED
-  * UNRELEASED
 
- -- Bogdan Kolos <exitsto@list.ru>  Mon, 26 Jul 2021 00:25:13 +0300
+ -- Bogdan Kolos <none@gmail.com>  Mon, 26 Jul 2021 00:25:13 +0300
