internal package ldflags

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-examplegolangdebproject (0.0.2-6-g86d9257) UNRELEASED; urgency=medium  * [[[insert-git-dch-commit-message-here]]]
+examplegolangdebproject (0.0.2-13-g1f3e757) UNRELEASED; urgency=medium  * [[[insert-git-dch-commit-message-here]]]
 
   [ bg ]
   * UNRELEASED
@@ -8,5 +8,13 @@ examplegolangdebproject (0.0.2-6-g86d9257) UNRELEASED; urgency=medium  * [[[inse
   * save state
   * wp: refactoring
   * add folder
+  * fix rename file
 
- -- Kolos Bogdan <exitstop@list.ru>  Tue, 27 Jul 2021 18:43:47 +0300
+  [ Bogdan Kolos ]
+  * add folder cmd
+  * rename dependend
+  * double product
+  * build many project
+  * create user by systemd
+
+ -- Bogdan Kolos <exitstop@list.ru>  Tue, 27 Jul 2021 23:17:28 +0300
